<LinearLayout
    android:id="@+id/activity_nota_detalle"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context="rodriapp.gestordenotas.NotaDetalle">

    <Button
        android:text="@string/insertar_nota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="8dp"
        android:id="@+id/btn_insertar_nota"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/nota_titulo_detalle"
        android:text="@string/titulo"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/nota_titulo_detalle"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/nota_descripcion_detalle"
        android:text="@string/descripcion"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences|text"
        android:ems="10"
        android:id="@+id/nota_descripcion_detalle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/nota_fecha_detalle"
        android:text="@string/fecha"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/nota_fecha_detalle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/nota_latitud_detalle"
        android:text="@string/latitud"/>

    <EditText
        android:labelFor="@+id/latitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/nota_latitud_detalle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/nota_fecha_detalle"
        android:text="@string/longitud"/>

    <EditText
        android:labelFor="@+id/longitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/nota_longitud_detalle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/nota_imagen_detalle"
        android:text="@string/imagen"
        android:paddingBottom="10dp"/>

    <ImageView
        android:contentDescription="content_description_nota_imagen"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:id="@+id/nota_imagen_detalle"
        android:padding="5dp" />

</LinearLayout>