<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="8dp"
              android:paddingRight="8dp">

    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <Button
            android:text="@string/nuevaNota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnNuevaNota"/>

        <Button
            android:text="@string/verNotasMapa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnNotasMapa"/>
    </LinearLayout>

    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <ListView android:id="@android:id/list"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="#000000"
                  android:layout_weight="1"
                  android:padding="10dp"
                  android:drawSelectorOnTop="false"/>

        <TextView android:id="@android:id/empty"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:background="#FF0000"
                  android:textSize="40sp"
                  android:padding="10dp"
                  android:text="@string/no_data"/>
    </LinearLayout>
</LinearLayout>
